<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mynion</groupId>
    <artifactId>Knockout</artifactId>
    <version>1.3.0</version>
    <packaging>pom</packaging>

    <name>Knockout</name>

    <modules>
        <module>common</module>
        <module>versions/1.19</module>
        <module>versions/1.19.1</module>
        <module>versions/1.19.3</module>
        <module>versions/1.19.4</module>
        <module>versions/1.20.6</module>
        <module>versions/1.21</module>
        <module>versions/1.21.3</module>
        <module>versions/1.21.4</module>
        <module>build</module>
    </modules>

    <properties>
        <java.version>16</java.version>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.15.0</version>
            </plugin>
        </plugins>
    </build>

</project>
